# sokol-beef

./: .gitignore  BeefProj.toml  CMakeLists.txt  LICENSE  README.md
samples/: BeefSpace.toml
samples/sokol-clear/: BeefProj.toml
samples/sokol-clear/src/: Program.bf
samples/sokol-triangle/: BeefProj.toml
samples/sokol-triangle/src/: Program.bf
src/sokol/: app.bf  audio.bf  debugtext.bf  gfx.bf  gl.bf  glue.bf  shape.bf  time.bf
